croupier-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: permedcoe
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: atosariapclab/croupier-frontend
        name: frontend
        ports:
        - containerPort: 80
          protocol: TCP
