croupier-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: frontend
  namespace: permedcoe
spec:
  ports:
  - name: frontend
    port: 80 
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
